# face_detection

./: CMakeLists.txt  eyelash_detection.cpp  face_detection.cpp  faces.py  header.hpp
Cpp_version/: CMakeLists.txt  eyelash_detection.cpp  face_detection.cpp  header.hpp  lips_detection.cpp  loop.bash  main.cpp  tracking.cpp
